<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="switch_theme_text">Тёмная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="write_to_support_text">Написать в поддержку</string>
    <string name="user_agreement_text">Пользовательское соглашение</string>
    <string name="settings_share_message">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="setting_email_address">filonuk05@gmail.com</string>
    <string name="settings_email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="toolbar_find_title">Поиск</string>
    <string name="hint_find">Поиск</string>
    <string name="nothing_not_found">Ничего не нашлось</string>
    <string name="no_internet_connection_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history_of_search">История поиска</string>
    <string name="clear">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="zero">00:00</string>
    <string name="empty_string" />
    <string name="media">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_media_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="cancel_playlist_creating">Завершить создание плейлиста?</string>
    <string name="all_unsave_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="permission_is_required_to_create_playlist">Для создания плейлиста необходимо разрешение!</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="this_track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="empty_playlist_tracks">В вашем плейлист нет ни одного трека</string>
    <string name="delete_tarck">Удалить трек</string>
    <string name="are_you_sure_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="this_playlist_not_contains_list_of_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_plylist">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <plurals name="tracks">
        <item quantity="one">1 трек</item>
        <item quantity="two">2 трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="playlist_time">
        <item quantity="one">1 минута</item>
        <item quantity="two">2 минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>