<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/media_toolbar"
        style="@style/toolbar"
        android:title="@string/media" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_media"
        style="@style/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="#651FFF"
        app:tabIndicatorHeight="4dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/favorite_tracks"
            android:textAllCaps="false"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/playlists"
            android:textAllCaps="false"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_media"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>