<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:importantForAccessibility="no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back_light" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_24_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_24_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tv_country"
        style="@style/activity_media_player_info_text"
        android:layout_marginBottom="28dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_16_start"
        app:layout_constraintTag="tv_country" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/activity_media_player_info_text"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/tv_country"
        app:layout_constraintStart_toEndOf="@id/guideline_16_start"
        app:layout_constraintTag="tv_genre" />

    <TextView
        android:id="@+id/tv_year"
        style="@style/activity_media_player_info_text"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/tv_genre"
        app:layout_constraintStart_toEndOf="@id/guideline_16_start"
        app:layout_constraintTag="tv_year" />

    <TextView
        android:id="@+id/tv_album"
        style="@style/activity_media_player_info_text"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/tv_year"
        app:layout_constraintStart_toEndOf="@id/guideline_16_start"
        app:layout_constraintTag="tv_album" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/activity_media_player_info_text"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/tv_album"
        app:layout_constraintStart_toEndOf="@id/guideline_16_start"
        app:layout_constraintTag="tv_duration" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="tv_duration, tv_album, tv_year, tv_genre, tv_country" />

    <TextView
        android:id="@+id/tv_country_text"
        style="@style/activity_media_player_info"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_country"
        app:layout_constraintEnd_toStartOf="@id/guideline_16_end"
        app:layout_constraintStart_toEndOf="@id/barrier_info"
        tools:text="@string/long_test_string" />

    <TextView
        android:id="@+id/tv_genre_text"
        style="@style/activity_media_player_info"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_genre"
        app:layout_constraintEnd_toStartOf="@id/guideline_16_end"
        app:layout_constraintStart_toEndOf="@id/barrier_info"
        tools:text="@string/long_test_string" />

    <TextView
        android:id="@+id/tv_year_text"
        style="@style/activity_media_player_info"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year"
        app:layout_constraintEnd_toStartOf="@id/guideline_16_end"
        app:layout_constraintStart_toEndOf="@id/barrier_info"
        tools:text="@string/long_test_string" />

    <TextView
        android:id="@+id/tv_album_text"
        style="@style/activity_media_player_info"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_album"
        app:layout_constraintEnd_toStartOf="@id/guideline_16_end"
        app:layout_constraintStart_toEndOf="@id/barrier_info"
        tools:text="@string/long_test_string" />

    <TextView
        android:id="@+id/tv_duration_text"
        style="@style/activity_media_player_info"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_duration"
        app:layout_constraintEnd_toStartOf="@id/guideline_16_end"
        app:layout_constraintStart_toEndOf="@id/barrier_info"
        tools:text="@string/long_test_string" />

    <ImageView
        android:id="@+id/iv_album_artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:importantForAccessibility="no"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_24_end"
        app:layout_constraintStart_toStartOf="@id/guideline_24_start"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        style="@style/track_name_text_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="start"
        android:lines="1"
        android:text="@string/album_name_test"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_24_end"
        app:layout_constraintStart_toEndOf="@id/guideline_24_start"
        app:layout_constraintTop_toBottomOf="@id/iv_album_artwork"/>

</androidx.constraintlayout.widget.ConstraintLayout>